# linear-algebra

./: README.md
python/: Solving.ipynb  Strang Chapter 1.1.ipynb  pyproject.toml
